# gift-assistant

./: .env-template  .gitignore  LICENSE  manage.py  pyproject.toml  readme.md  requirements.txt
gift_app/: admin.py  apps.py  forms.py  models.py  occasions.py  recipients.py  relationships.py  urls.py  views.py
gift_app/migrations/: 0001_initial.py  0002_alter_recipient_options_and_more.py  0003_alter_recipient_gender_alter_recipient_relationship.py  0004_alter_recipient_relationship.py  0005_occasion_gift.py  0006_alter_gift_occasion_id_alter_gift_recipient_and_more.py  0007_alter_recipient_birth_date_alter_recipient_email_and_more.py  0008_alter_recipient_birth_date_alter_recipient_email_and_more.py  0009_gift_given_alter_gift_description_alter_gift_link_and_more.py  0010_remove_recipient_user_id_recipient_user.py  0011_alter_recipient_user.py  0012_delete_profile.py  0013_alter_recipient_user_profile.py  0014_alter_recipient_user.py  0015_gift_date_given_alter_recipient_user.py  0016_rename_occasion_id_gift_occasion.py  0017_gift_user_occasion_user.py  0018_remove_recipient_birth_date_recipient_age_and_more.py  0019_recipient_unknown_birthyear.py  0020_rename_unknown_birthyear_recipient_birth_year_unknown.py  0021_alter_occasion_options_remove_occasion_name_and_more.py  0022_remove_gift_recipient_alter_occasion_occasion_type.py  0023_alter_occasion_options_remove_recipient_email_and_more.py  0024_rename_created_on_gift_created_at_and_more.py  0025_alter_recipient_age_alter_recipient_birth_day_and_more.py  (+4 more)
gift_assist/: asgi.py  settings.py  urls.py  wsgi.py
tests/: test_gift_app.py
(+43 files in other folders)
