[tool.poetry]
name = "gift-assistant"
version = "0.1.0"
description = "An app that allows a user to manage gifts and be reminded about special occassions"
authors = ["Heather Gray"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.5"
django-rest-framework = "^0.1.0"
python-decouple = "^3.6"
django-allauth = "^0.51.0"
django-active-link = "^0.1.8"
django-bootstrap-v5 = "^1.0.11"
holidays = "^0.14.2"
dj-database-url = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
